# draw-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  compose.yaml  devcontainer.json
src/: main.py
src/api_server/: __init__.py  api_server.py
src/api_server/router/v1/: __init__.py  get_file_stream.py
src/lib/: __init__.py  parse_args.py  parse_env.py  startup_options.py
src/mcp_server/: __init__.py  get_draw_mcp_server.py
