[project]
name = "draw-mcp-server"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.3", "fastmcp>=2.12.5", "fastapi>=0.119.0"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
    "types-psycopg2>=2.9.10"
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 200
select = ["ALL"]
ignore = [
    "ANN401",
    "ARG001",
    "ARG002",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D415",
    "DTZ005",
    "DTZ007",
    "E501",
    "E731",
    "ERA001",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
    "S311",
    "T201",
    "TRY002",
    "S101",
    "TD002",
    "TD003",
    "FIX002"
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true